<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context="com.brandhype.medixfora.fragments.AskMeAnyFragment">

    <com.brandhype.medixfora.customviews.CustomTextView
        app:myfont="OpenSans_Regular.ttf"
        android:id="@+id/askmeany_head_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/head"
        android:textColor="@color/colorPrimaryDarkS"
        android:background="#00ffffff"
        android:layout_gravity="left"
        android:textSize="@dimen/font_size_14"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:paddingLeft="7dp"
        android:visibility="visible"
        />

    <ScrollView
        android:id="@+id/askmeany_scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="3dp"
        android:paddingTop="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:isScrollContainer="false"
        android:layout_below="@+id/askmeany_head_txt"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            android:orientation="vertical"
            android:background="@color/grey3"
            >

            <!--  Name -->
            <RelativeLayout
                android:id="@+id/askmeany_name_lay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:background="@drawable/line_text"
                android:paddingBottom="10dp"
                >
                <com.brandhype.medixfora.customviews.CustomTextView
                    app:myfont="OpenSans_Regular.ttf"
                    android:id="@+id/askmeany_name_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/colorPrimaryDarkS"
                    android:background="#00ffffff"
                    android:layout_gravity="left"
                    android:textSize="@dimen/font_size_14"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:paddingLeft="7dp"
                    android:visibility="visible"
                    />
                <com.brandhype.medixfora.customviews.CustomEditText
                    app:myfont="OpenSans_Regular.ttf"
                    android:id="@+id/askmeany_name"
                    android:layout_below="@+id/askmeany_name_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:hint=""
                    android:inputType="textCapWords"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="7dp"
                    android:paddingRight="0dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/greydeep"
                    android:textSize="@dimen/font_size_edittxt"
                    android:text=""
                    android:background="@android:color/transparent"
                    />

            </RelativeLayout>

            <!-- email -->
            <RelativeLayout
                android:id="@+id/askmeany_email_lay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:background="@drawable/line_text"
                android:paddingBottom="10dp"
                >

                <com.brandhype.medixfora.customviews.CustomTextView
                    app:myfont="OpenSans_Regular.ttf"
                    android:id="@+id/askmeany_email_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimaryDarkS"
                    android:background="#00ffffff"
                    android:layout_gravity="left"
                    android:textSize="@dimen/font_size_14"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:paddingLeft="7dp"
                    android:visibility="visible"
                    />
                <com.brandhype.medixfora.customviews.CustomEditText
                    app:myfont="OpenSans_Regular.ttf"
                    android:id="@+id/askmeany_email"
                    android:layout_below="@+id/askmeany_email_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:hint=""
                    android:inputType="textEmailAddress"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="7dp"
                    android:paddingRight="0dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/greydeep"
                    android:textSize="@dimen/font_size_edittxt"
                    android:text=""
                    android:background="@android:color/transparent"
                    />

            </RelativeLayout>

            <!-- phone -->
            <RelativeLayout
                android:id="@+id/askmeany_phone_lay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:background="@drawable/line_text"
                android:paddingBottom="10dp"
                >
                <com.brandhype.medixfora.customviews.CustomTextView
                    app:myfont="OpenSans_Regular.ttf"
                    android:id="@+id/askmeany_phone_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/colorPrimaryDarkS"
                    android:background="#00ffffff"
                    android:layout_gravity="left"
                    android:textSize="@dimen/font_size_14"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:paddingLeft="7dp"
                    android:visibility="visible"
                    />
                <com.brandhype.medixfora.customviews.CustomEditText
                    app:myfont="OpenSans_Regular.ttf"
                    android:id="@+id/askmeany_phone"
                    android:layout_below="@+id/askmeany_phone_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:hint=""
                    android:inputType="number"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="7dp"
                    android:paddingRight="0dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/greydeep"
                    android:textSize="@dimen/font_size_edittxt"
                    android:text=""
                    android:background="@android:color/transparent"
                    />
            </RelativeLayout>

            <!-- message -->
            <RelativeLayout
                android:id="@+id/askmeany_message_lay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                >
                <com.brandhype.medixfora.customviews.CustomTextView
                    app:myfont="OpenSans_Regular.ttf"
                    android:id="@+id/askmeany_message_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message"
                    android:textColor="@color/colorPrimaryDarkS"
                    android:background="#00ffffff"
                    android:layout_gravity="left"
                    android:textSize="@dimen/font_size_14"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:paddingLeft="7dp"
                    android:visibility="visible"
                    />
                <com.brandhype.medixfora.customviews.CustomEditText
                    app:myfont="OpenSans_Regular.ttf"
                    android:id="@+id/askmeany_message"
                    android:layout_below="@+id/askmeany_message_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="5dp"
                    android:hint="Type your message here"
                    android:inputType="textMultiLine|textCapSentences"
                    android:lines="4"
                    android:paddingBottom="10dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="0dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/edittext_hint"
                    android:textSize="@dimen/font_size_14"
                    android:background="@drawable/rounded_corner_cyan_border"
                    android:gravity="left|top"
                    />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <!-- buttons -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/login_margin"
        android:layout_marginRight="@dimen/login_margin"
        >
        <com.brandhype.medixfora.customviews.CustomButton
            app:myfont="OpenSans_Regular.ttf"
            android:id="@+id/askmeany_skip_button"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:padding="5dp"
            android:textColor="#ffffff"
            android:background="@drawable/rounded_corner_cyan_button"
            android:text="Cancel"
            android:textStyle="normal"
            android:textSize="@dimen/font_buttontxt"
            android:textAllCaps="false"
            android:layout_alignParentStart="true"
            />
        <com.brandhype.medixfora.customviews.CustomButton
            app:myfont="OpenSans_Regular.ttf"
            android:id="@+id/askmeany_submit_button"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:padding="5dp"
            android:textColor="#ffffff"
            android:background="@drawable/rounded_corner_cyan_button"
            android:text="Submit"
            android:textStyle="normal"
            android:textSize="@dimen/font_buttontxt"
            android:textAllCaps="false"
            />
    </RelativeLayout>

</RelativeLayout>
